--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ h2 {
 	
 }
 
-@media only screen and (min-width: 414px) and (max-width: 736px) { 
+@media only screen and (max-width: 736px) { 
 	body {
 	background-image: url(../images/starwarsbattle2.jpg);
 	background-size: 1650px 1200px;
