--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 
 h1 {
 	font-family: 'Francois One', sans-serif;
-	color: white;
+	color: yellow;
 	font-size: 20px;
 	font-weight: bolder;
 	text-shadow: 0 0 10px black, 0 0 15px black;
@@ -18,7 +18,7 @@ h2 {
 	font-family: 'Francois One', sans-serif;
 	color: white;
 	font-weight: bold;
-	text-shadow: 0 0 10px black, 0 0 15px black;
+	text-shadow: 0 0 15px black, 0 0 25px black;
 }
 
 .houses {
@@ -47,7 +47,7 @@ h2 {
 	font-size: 24px;
 	font-weight: bold;
 	background-color: black;
-	color: white;
+	color: red;
 	border-style: solid;
 	border-color: black;
 }
