--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ h2 {
 	font-size: 24px;
 	font-weight: bold;
 	background-color: black;
-	color: red;
+	color: white;
 	border-style: solid;
 	border-color: black;
 }
